moody_frontend: profile component created
